<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">MyMultiLanguangeApp</string>

    <string name="football">Indonesia National Team win against Malaysia National Team</string>
    <string name="goal">Goal from Indonesia scored by %1$s and %2$s, so the final score is %3$d - %4$d for Indonesia victory</string>
    
    <plurals name="numberOfSongsAvailable">
        <item quantity="one">%d song found</item>
        <item quantity="other">%d songs found</item>
    </plurals>

    <string name="app_homeurl">
        Visit us at <xliff:g id="homepage">https://www.polines.ac.id</xliff:g>
    </string>
    
    <string name="change_language_settings">Change Language Settings</string>

    <string name="tab_text1">Home</string>
    <string name="tab_text2">Profile</string>

    <string name="name">Name: </string>
    <string name="myname">Mohamad Pradita Anugerah Ramadhan</string>
    <string name="address">Address: </string>
    <string name="myaddress">Menjangan II 63, Semarang City</string>
    <string name="hobby">Hobby: </string>
    <string name="myhobby">Farming Items</string>
    <string name="quotes">Quotes: </string>
    <string name="myquotes">I can do this</string>
</resources>
