<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment">
    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="PROFILE"
            android:textSize="30sp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal" />

        <ImageView
            android:id="@+id/profile_picture"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/profile_picture" />

        <GridLayout
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="70dp"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:text="@string/name" />

            <TextView
                android:layout_marginLeft="10dp"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:text="@string/myname" />
        </GridLayout>

        <GridLayout
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="">

            <TextView
                android:layout_width="70dp"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:text="@string/address" />

            <TextView
                android:layout_marginLeft="10dp"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:text="@string/myaddress" />
        </GridLayout>

        <GridLayout
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="70dp"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:text="@string/hobby" />

            <TextView
                android:layout_marginLeft="10dp"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:text="@string/myhobby" />
        </GridLayout>

        <GridLayout
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="70dp"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:text="@string/quotes" />

            <TextView
                android:layout_width="280dp"
                android:layout_marginLeft="10dp"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:text="@string/myquotes" />
        </GridLayout>
    </LinearLayout>
</FrameLayout>